<resources>
    <string name="app_name">尚课啦</string>
    <string name="exit_destroy_app">再次点击退出应用</string>

    <string name="item_answer_card_text">答题卡</string>
    <string name="item_answer_card_hint_text">错题已自动加入错题本</string>
    <string name="item_answer_total_analysis_text">答题总分析</string>
    <string name="item_answer_knowledge_text">知识点掌握情况分析</string>
    <string name="item_answer_proposal_text">学习建议</string>
    <string name="success_text">正确</string>
    <string name="error_text">错误</string>
    <string name="item_total_exercises_count_text">总题数</string>
    <string name="item_total_exercises_time_text">总用时</string>
    <string name="item_total_exercises_ranking_text">总排比</string>

    <string name="drafts_text">草稿本</string>

    <string name="phone_error_hint_text">请输入正确的手机号</string>
    <string name="longin_title_text">登陆</string>
    <string name="edit_phone_hint_text">请输入您的手机号</string>
    <string name="login_phone_hint_text">如该手机号尚未注册,将进入注册</string>
    <string name="next_bt_text">下一步</string>
    <string name="send_msg_title_code_text">发送验证码</string>
    <string name="send_msg_edit_hint_text">请输入短信验证码</string>
    <string name="msg_code_error_text">验证码错误,请重新输入</string>
    <string name="set_password_hint_text">请输入4到8位数密码,含数字和字母</string>
    <string name="set_password_title_text">请设置密码</string>
    <string name="reset_password_title_text">重置密码</string>
    <string name="register_success_text">注册成功</string>
    <string name="register_error_text">注册失败</string>
    <string name="loading_one_hint_text">加载中...</string>
    <string name="edit_password_title_text">请输入密码</string>
    <string name="reset_passwrod_next_bt_text">确认重置</string>
    <string name="again_send_msg_text">再次发送</string>
    <string name="start_my_study_text">开始标记我的学习旅程</string>
    <string name="edit_name_text">请输入您的名字</string>
    <string name="select_sex_text">请选择您的性别</string>
    <string name="select_grade_text">请选择您的年级</string>
    <string name="modify_password_success_text">密码重置成功</string>
    <string name="modify_password_error_text">密码重置失败</string>
    <string name="password_error">密码错误</string>
    <string name="video_count_text">共%1$s讲</string>
    <string name="pull_to_load">上拉加载</string>
    <string name="loading">正在加载</string>
    <string name="release_to_load">加载完成</string>
    <string name="class_empty_hint_text">还没有班级呢,快去寻找你的小伙伴吧</string>
    <string name="teacher_class_empty_hint_text">暂时还没有班级呢</string>
    <string name="student_add_class_room_hint_text">请输入6位班级编号</string>
    <string name="student_video_cache_empty_text">暂时还没有缓存任何视频呢</string>
    <string name="student_video_cache_empty_hint_text">可在视频播放页面点击缓存按钮进行缓存哦</string>
    <string name="student_collect_empty_text">暂时还没有收藏任何视频呢</string>
    <string name="student_collect_empty_hint_text">可在视频播放页面点击收藏按钮进行收藏哦</string>
    <string name="student_purchase_empty_text">您暂无待支付订单哦</string>
    <string name="student_learning_empty_text">暂时还没有购买任何学习卡呢</string>

    <string name="now_download">正在下载</string>
    <string name="start_download">开始下载</string>
    <string name="update_version">版本更新</string>
    <string name="update_version_error">版本更新失败</string>
    <string name="update_version_error_download">更新失败,点击重新下载</string>
    <string name="complete_download">完成下载,点击安装</string>
    <string name="install_now">立即安装</string>
    <string name="update_now">立即更新</string>
    <string name="exp_after">稍后再说</string>
    <string name="exit_app">退出应用</string>
    <string name="exp_now">立即体验</string>

    <string name="alivc_player_settings_title">Player Settings</string>
    <string name="alivc_error_msg">Error message</string>
    <string name="alivc_error_code">Error code:</string>
    <string name="alivc_retry">Retry</string>


    <string name="alivc_net_disable">The network is unreachable, please check network and replay latter</string>
    <string name="alivc_net_state_mobile">The current network is cell-network, whether to continue?</string>
    <string name="alivc_net_state_mobile_yes">Resume</string>
    <string name="alivc_net_state_mobile_no">Exit</string>
    <string name="alivc_alivc_replay_msg">Video ended</string>
    <string name="alivc_replay">Replay</string>
    <string name="alivc_loading">Loading...</string>
    <string name="alivc_loading_tips">Video is loading...</string>


    <string name="alivc_speed_one_times">Normal</string>
    <string name="alivc_speed_optf_times">1.25X</string>
    <string name="alivc_speed_opt_times">1.5X</string>
    <string name="alivc_speed_twice_times">2.0X</string>
    <string name="alivc_speed_mode">Fast Speed Play</string>
    <string name="alivc_speed_tips">the current video has switched to %1$s speed rate</string>
    <string name="alivc_left_side">left side</string>
    <string name="alivc_brightness">brightness</string>
    <string name="alivc_control">&#160;control</string>
    <string name="alivc_center">center</string>
    <string name="alivc_progress">progress</string>
    <string name="alivc_right_side">right side</string>
    <string name="alivc_volume">volume</string>

    <string name="input_vid_here">Please input vid here</string>
    <string name="inout_accesskeyid_here">input accesskeyId here </string>
    <string name="input_accesskeysecret_here">input accesskeySecret here</string>
    <string name="input_securitytoken_here">input securityToken here </string>
    <string name="input_url_here">input url here </string>
    <string name="start_player_ui">Open UI of player</string>
    <string name="start_player_setting">Setting</string>
    <string name="request_vidsts_fail">Request a vidsts failed</string>
    <string name="play_url_null_toast">Play video URL cannot be null</string>
    <string name="clear_logs">clear logs</string>

    <string name="player_log">Player Logs：</string>
    <string name="log_start_get_data">&#160;start to get a streaming</string>
    <string name="log_strart_play">&#160;start to play</string>
    <string name="log_prepare_success"> &#160;prepared successfully</string>
    <string name="toast_prepare_success">Prepared successfully</string>
    <string name="log_play_completion">&#160;video ended</string>
    <string name="toast_play_compleion">video ended</string>
    <string name="log_player_create_success"> &#160;create a player successfully</string>
    <string name="log_open_url_success"> &#160;open an url successfully</string>
    <string name="log_request_stream_success"> &#160;get a streaming successfully</string>
    <string name="log_start_open_stream"> &#160;start to open a streaming</string>
    <string name="log_first_frame_played"> &#160;the first frame showed</string>
    <string name="log_seek_completed">&#160;seek operation completed</string>
    <string name="log_play_stopped">&#160;play operation stopped</string>
    <string name="log_seek_start">&#160;seek operation started</string>
    <string name="log_change_quality_success">&#160;Video quality switched successfully</string>
    <string name="log_change_quality_fail">&#160;Video quality switched unsuccessfully</string>

    <string name="alivc_checkbox_all_select">Select All</string>
    <string name="alivc_download_delete">Delete</string>
    <string name="alivc_download_edit">Edit</string>

    <string name="prepare_download_item">To prepare download-item</string>
    <string name="add_to_download">To add</string>
    <string name="no_download_right">No permission for downloading</string>
    <string name="encrypted">Encrypted</string>
    <string name="encrypted_no">Unencrypted</string>
    <string name="choose_a_definition_to_download">Please choose a definition to download</string>
    <string name="choose_downloaditem">Choose download item</string>
    <string name="choose_download_sharpness">Choose download sharpness</string>
    <string name="already_downloaded">Already Downloaded</string>
    <string name="download_caching">Caching</string>
    <string name="download_prepare">preparing</string>
    <string name="download_wait">waiting</string>
    <string name="download_downloading">downloading</string>
    <string name="download_pause">pausing</string>
    <string name="download_error">error</string>
    <string name="download_no_downloaded">You haven’t downloaded the video yet</string>
    <string name="download_no_downloaded_tips">You can click the download button to add video</string>
    <string name="alivc_delete_confirm">Do you want to delete the selected video?</string>
    <string name="alivc_start_download">start download</string>
    <string name="alivc_native_video">native video</string>

    <string name="alivc_check_list_close">Close</string>
    <string name="kickbt">Ok</string>
    <string name="kickalert">你被主播移出直播间，请注意言行！</string>

    <string name="alivc_download_video">download video</string>

    <string name="alivc_dialog_sure">Ok</string>
    <string name="alivc_dialog_cancle">Cancle</string>
    <string name="slivc_not_support_url">not support url download...</string>

    <string name="alivc_speed">speed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
