<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_login_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.huisu.iyoox.activity.LoginActivity">

    <include layout="@layout/layout_title_bar_all_trans" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_30" />

        <LinearLayout
            android:id="@+id/login_edit_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.huisu.iyoox.views.PhoneEditText
                android:id="@+id/login_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dip_20"
                android:layout_marginRight="@dimen/dip_20"
                android:hint="@string/edit_phone_hint_text"
                android:inputType="phone|number"
                android:maxLength="13"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_phone_edit_text"
                android:layout_marginLeft="@dimen/dip_24"
                android:layout_marginTop="@dimen/dip_4"
                android:text="@string/login_phone_hint_text"
                android:textColor="@color/color999"
                android:textSize="@dimen/f_10" />

            <Button
                android:id="@+id/login_phone_next_bt"
                android:layout_width="@dimen/dip_320"
                android:layout_height="@dimen/dip_40"
                android:layout_below="@id/login_phone_edit_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dip_22"
                android:background="@drawable/select_button_bg_maincolor"
                android:enabled="false"
                android:text="@string/next_bt_text"
                android:textColor="@color/white"
                android:textSize="@dimen/f_16" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>