<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_login_bg"
    android:orientation="vertical"
    tools:context="com.huisu.iyoox.activity.LoginActivity">

    <include layout="@layout/layout_title_bar_all_trans" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/passwrod_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip_27"
            android:text="@string/set_password_title_text"
            android:textColor="@color/black_87"
            android:textSize="@dimen/f_30" />

        <RelativeLayout
            android:id="@+id/register_password_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/register_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:layout_marginLeft="@dimen/dip_27"
                android:layout_marginRight="@dimen/dip_27"
                android:hint="@string/set_password_hint_text"
                android:inputType="textPassword"
                android:maxLength="8"
                android:minLines="4"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_16" />

            <TextView
                android:id="@+id/reset_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/register_password_edit_text"
                android:layout_marginRight="@dimen/dip_27"
                android:layout_marginTop="@dimen/dip_8"
                android:text="忘记密码?"
                android:textColor="@color/maincolor"
                android:textSize="@dimen/f_13" />

            <Button
                android:id="@+id/register_password_next_bt"
                android:layout_width="@dimen/dip_320"
                android:layout_height="@dimen/dip_40"
                android:layout_below="@id/reset_password_tv"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dip_10"
                android:background="@drawable/select_button_bg_maincolor"
                android:enabled="false"
                android:text="@string/next_bt_text"
                android:textColor="@color/white" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
