<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_login_bg"
    android:orientation="vertical"
    tools:context="com.huisu.iyoox.activity.LoginActivity">

    <include layout="@layout/layout_title_bar_all_trans" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip_30"
        android:text="请编辑你的档案"
        android:textColor="@color/black_87"
        android:textSize="@dimen/f_30" />

    <LinearLayout
        android:id="@+id/register_person_details_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip_27"
        android:layout_marginRight="@dimen/dip_27"
        android:orientation="vertical"
        android:paddingTop="@dimen/dip_105">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/reg_name" />

            <EditText
                android:id="@+id/register_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dip_18"
                android:hint="@string/edit_name_text"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="@color/black_87"
                android:textSize="@dimen/f_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/reg_gender" />

            <EditText
                android:id="@+id/register_gender_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dip_12"
                android:cursorVisible="false"
                android:drawableRight="@drawable/more_unfold_green"
                android:hint="@string/select_sex_text"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="@dimen/f_20" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/reg_grade" />

            <EditText
                android:id="@+id/register_select_grade_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/dip_12"
                android:cursorVisible="false"
                android:drawableRight="@drawable/more_unfold_green"
                android:hint="@string/select_grade_text"
                android:maxLength="8"
                android:singleLine="true"
                android:textSize="@dimen/f_20" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/register_person_details_next_bt"
        android:layout_width="@dimen/dip_320"
        android:layout_height="@dimen/dip_40"
        android:layout_below="@id/register_person_details_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dip_24"
        android:background="@drawable/select_button_bg_maincolor"
        android:enabled="false"
        android:text="@string/start_my_study_text"
        android:textColor="@color/white" />
</LinearLayout>
